--- a/public/views/home.html
+++ b/public/views/home.html
@@ -17,7 +17,7 @@
     <div class="separator-fields"></div>
     <h1 class="title-h1">Welcome to Manhattan!</h1>
     <div class="separator-fields"></div>
-    <p class="description-new larger">Hello there and welcome to Manhattan. The latest &nbsp;mobile template that will help you create a mobile website, a mobile web app or even a native app. With a modern and stylish design, you can create amazing things and give your page the true essence of a mobile feel it really deserves.</p>
+    <p class="description-new larger">Hello there and welcome to Manhattan. The latestmobile template that will help you create a mobile website, a mobile web app or even a native app. With a modern and stylish design, you can create amazing things and give your page the true essence of a mobile feel it really deserves.</p>
     <div class="separator-button"></div><a class="w-button action-button" href="#">Find out more</a>
     <div class="separator-fields"></div>
     <div class="separator-fields"></div>
@@ -40,19 +40,6 @@
           "height": 250,
           "size": 28508,
           "type": "image"
-        }] }
-      </script>
-    </a>
-    <a class="w-lightbox w-inline-block portfolio-item" href="#">
-      <div class="portfolio-image bg1"></div>
-      <script type="application/json" class="w-json">
-        { "group": "portfolio-home", "items": [{
-          "type": "video",
-          "html": "<iframe class=\"embedly-embed\" src=\"https://cdn.embedly.com/widgets/media.html?src=https%3A%2F%2Fwww.youtube.com%2Fembed%2FXFuF_yAPO8o%3Fautoplay%3D1%26feature%3Doembed&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DXFuF_yAPO8o&image=https%3A%2F%2Fi.ytimg.com%2Fvi%2FXFuF_yAPO8o%2Fhqdefault.jpg&key=c4e54deccf4d4ec997a64902e9a30300&autoplay=1&type=text%2Fhtml&schema=youtube\" width=\"940\" height=\"528\" scrolling=\"no\" frameborder=\"0\" allowfullscreen></iframe>",
-          "thumbnailUrl": "https://i.embed.ly/1/image?url=https%3A%2F%2Fi.ytimg.com%2Fvi%2FXFuF_yAPO8o%2Fhqdefault.jpg&key=866738f8f18b4394a18e371517a66ae0",
-          "width": 940,
-          "height": 528,
-          "url": "http://www.youtube.com/watch?v=XFuF_yAPO8o"
         }] }
       </script>
     </a>
